fixed bug with dusk images not showing up at appropriate time, fleshed out weather info cards

--- a/dashStyle.css
+++ b/dashStyle.css
@@ -1,5 +1,7 @@
 body{
-	
+	display: flex;
+	flex-flow: nowrap column;
+	align-items: center;
 	background-image: url('assets/img/clear-dusk.jpg');
 	background-size: cover;
 	background-position: center;
@@ -11,6 +13,7 @@ input:focus{
 #container{
 	align-items: center;
 	border-radius: 5px;
+	width: 432px;
 	margin: .5rem;
 	margin-top: 1rem;
 	margin-bottom: 1rem;
@@ -34,7 +37,7 @@ h1{
 	margin-left: 4rem;
 	align-items: center;
 	background-color: rgba(35, 0, 60, 45%);
-	width: 96%;
+	width: 416px;
 	padding-bottom: 1rem;
 	border-radius: 5px;
 }
@@ -52,15 +55,12 @@ h3{
 	border-radius: 5px;
 	background-color: rgba(255, 255, 255, 60%);
 	color: #000;
-	width: 80%;
+	width: 384px;
 	
 }
 #searchType{
+	width: 48.5%;
 	align-items: flex-start;
-}
-#searchType input{
-	border-radius: 50%;
-	background-color: 
 }
 #searchSection{
 	border-left: 1px solid rgba(170, 170, 170, 70%);
@@ -68,6 +68,7 @@ h3{
 	padding-left: 5px;
 }
 #searchSection input{
+	width: 106%;
 	text-align: center;
 	background-color: rgba(60, 0, 95, 70%);
 	border-radius: 5px;
@@ -96,7 +97,7 @@ h3{
 	background-color: rgba(70, 0, 95, 30%);
 	color: #ea7200;
 	font-size: 24px;
-	width: 70%;
+	width: 300px;
 }
 footer{
 	font-weight: bold;
@@ -111,6 +112,9 @@ footer{
 	padding-top: 1rem;
 	padding-bottom: 1rem;
 	font-size: 36px;
+}
+.addOn{
+	margin-top: 1rem;
 }
 .columnNW{
 	display: flex;
@@ -127,5 +131,9 @@ footer{
 .rowWrap{
 	display: flex;
 	flex-flow: wrap row;
+}
+
+@media screen and (min-width: 481px){
+	
 }
 
